--- a/GA/GA_2_Traffic_Light/css/main.css
+++ b/GA/GA_2_Traffic_Light/css/main.css
@@ -1,59 +1,72 @@
+body {
+  font-family: Helvetica;
+}
+
+p {
+  color: white;
+}
+
 .trafficlight {
-background: black;
-width: 170px;
-height: 400px;
-float: left;
+  margin-right: 50px;
+  padding-top: 10px;
+  background: black;
+  width: 170px;
+  height: 350px;
+  float: left;
+  border-radius: 20%;
 }
 
-.red {
-background: red;
-width: 100px;
-height: 100px;
-border-radius: 50%;
-position: absolute;
-top: 20px;
-left: 35px;
-}
 
-.yellow {
-background: yellow;
-width: 100px;
-height: 100px;
-border-radius: 50%;
-position: absolute;
-top: 145px;
-left: 35px;
-}
-
-.green {
-background: green;
-width: 100px;
-height: 100px;
-border-radius: 50%;
-position: absolute;
-top: 270px;
-left: 35px;
+.light {
+  border-radius: 50%; 
+  background-color: black; 
+  height: 175px; 
+  width: 175px;
+  margin-right: auto; 
+  margin-left: auto;
+  margin-bottom: 10px;
+  border: 3px solid white; 
  }
 
-.button {
-float: left;
-width: 100px;
-text-align: right;
-padding-left: 40px;
-text-align: center;
-text-decoration: none;
-font-family: Helvetica;
+ 
+#red {
+  background: red;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
 }
 
+#green {
+  background: green;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
 
- 
-.click {
-color: white;
-padding: 50px;
-margin: 10px;
-padding-top: 20px;
-padding-bottom: 20px;
-border-style: solid;
-border-radius: 25px;
-background-color: gray;
+#yellow {
+  background: yellow;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+#menu {
+  width: 100px;
+  text-align: center;
+  float: left;
+  margin-left: 10px;
+  padding: 10px;
+  
+}
+
+.button {
+  background-color: black;
+  border-radius: 8px;
+  cursor: pointer; 
+  padding: 5px; 
+
+}
+  
+.button:hover {
+  background-color: grey; 
 }
